1.0-devel
=====================

 * Added syndication support to Smart Folders.
   [alecm]

 * Fixed some tests on Windows. Image files must be opened with 'rb'.
   [hannosch]

 * Moved around some fields. excludeFromNav is on the property sheet expect for
   folderish items and discussion is on the main sheet expecpt for folderish and
   Favorite.
   [tiran]

 * Added finalizeATCTSchema function to move the fields in the right position
   [tiran]

 * Fixed http://plone.org/collector/4127 permission incorrect on
   listSubtopics.
   [alecm]

 * Added migration to change the name of the Topic configlet.
   [alecm]

 * Fixed http://members.plone.org/collector/4076, adding exclude_from_nav to
   all content schemas.
   [optilude]

 * Fixes for migration of cataloged non-contentish objects.  Now checking
   meta_type and portal_type before migration steps.
   [alecm]

 * Fixed http://members.plone.org/collector/3804 added validation of filename
   when appropriate using check_id if available.
   [alecm]

 * Added index for relatedItems, and migration to install it into already
   installed instances.
   [alecm]

 * Made the tool check if a config entry is available whenever it finds a new
   index, so that it is automatically enabled if desirable, and to minimize
   the need for migrations.
   [alecm]

 * Disabled all indexes in criteria form by default, only those with
   default values are automatically enabled.  This prevents things like ZWiki
   from messing up our nice edit form.  They can be enabled and prettified in
   the tool.
   [alecm]

 * Spring i18n cleanup:
   * changed i18n:domain from plone to atcontenttypes
   * added missing i18n markup
   * fixed page templates XHTML errors
   * reindented and cleaned up whitespaces
   [deo]

 * Made portal_type, selection, and reference criteria return reasonably
   sorted lists.
   [alecm]

 * Updated folderlisting actions to work properly with optiludes new
   browserdefault behavior.
   [alecm]
